--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -9,6 +9,11 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
+      - name: Scrape and build LaTeX document
+        run: |
+          sudo apt-get update && sudo apt-get install -y python3 python3-pip && \
+          sudo -H pip3 install beautifulsoup4 && \
+          python3 build.py
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
